Parte2/sintatico.output
Terminals unused in grammar

    T_V


State 56 conflicts: 9 shift/reduce
State 57 conflicts: 9 shift/reduce
State 58 conflicts: 9 shift/reduce
State 59 conflicts: 9 shift/reduce
State 60 conflicts: 9 shift/reduce
State 61 conflicts: 9 shift/reduce
State 62 conflicts: 9 shift/reduce
State 63 conflicts: 9 shift/reduce
State 64 conflicts: 9 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIMPROG

    2 cabecalho: T_PROGRAMA T_IDENTIF

    3 variaveis: ε
    4          | declaracao_variaveis

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    6                     | tipo lista_variaveis

    7 tipo: T_INTEIRO
    8     | T_LOGICO

    9 lista_variaveis: lista_variaveis T_IDENTIF
   10                | T_IDENTIF

   11 lista_comandos: lista_comandos comando
   12               | comando

   13 comando: leitura
   14        | escrita
   15        | repeticao
   16        | selecao
   17        | atribuicao

   18 leitura: T_LEIA T_IDENTIF

   19 escrita: T_ESCREVA expressao

   20 repeticao: T_ENQUANTO expressao T_FACA lista_comandos T_FIMENQTO

   21 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   22 atribuicao: T_IDENTIF T_ATRIB expressao

   23 expressao: expressao T_MAIS expressao
   24          | expressao T_MENOS expressao
   25          | expressao T_VEZES expressao
   26          | expressao T_DIV expressao
   27          | expressao T_MAIOR expressao
   28          | expressao T_MENOR expressao
   29          | expressao T_IGUAL expressao
   30          | expressao T_E expressao
   31          | expressao T_OU expressao
   32          | termo

   33 termo: T_NUMERO
   34      | T_IDENTIF
   35      | T_VEZES
   36      | T_F
   37      | T_NAO
   38      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 2
    T_INICIO (259) 1
    T_FIMPROG (260) 1
    T_LEIA (261) 18
    T_ESCREVA (262) 19
    T_SE (263) 21
    T_ENTAO (264) 21
    T_SENAO (265) 21
    T_FIMSE (266) 21
    T_ENQUANTO (267) 20
    T_FACA (268) 20
    T_FIMENQTO (269) 20
    T_MAIS (270) 23
    T_MENOS (271) 24
    T_VEZES (272) 25 35
    T_MAIOR (273) 27
    T_MENOR (274) 28
    T_DIV (275) 26
    T_IGUAL (276) 29
    T_E (277) 30
    T_OU (278) 31
    T_NAO (279) 37
    T_ATRIB (280) 22
    T_ABRE (281) 38
    T_FECHA (282) 38
    T_INTEIRO (283) 7
    T_LOGICO (284) 8
    T_V (285)
    T_F (286) 36
    T_IDENTIF (287) 2 9 10 18 22 34
    T_NUMERO (288) 33


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 1
        on right: 0
    cabecalho (36)
        on left: 2
        on right: 1
    variaveis (37)
        on left: 3 4
        on right: 1
    declaracao_variaveis (38)
        on left: 5 6
        on right: 4 5
    tipo (39)
        on left: 7 8
        on right: 5 6
    lista_variaveis (40)
        on left: 9 10
        on right: 5 6 9
    lista_comandos (41)
        on left: 11 12
        on right: 1 11 20 21
    comando (42)
        on left: 13 14 15 16 17
        on right: 11 12
    leitura (43)
        on left: 18
        on right: 13
    escrita (44)
        on left: 19
        on right: 14
    repeticao (45)
        on left: 20
        on right: 15
    selecao (46)
        on left: 21
        on right: 16
    atribuicao (47)
        on left: 22
        on right: 17
    expressao (48)
        on left: 23 24 25 26 27 28 29 30 31 32
        on right: 19 20 21 22 23 24 25 26 27 28 29 30 31 38
    termo (49)
        on left: 33 34 35 36 37 38
        on right: 32


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    2 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    1 programa: cabecalho • variaveis T_INICIO lista_comandos T_FIMPROG

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 3 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    2 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 2 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    7 tipo: T_INTEIRO •

    $default  reduce using rule 7 (tipo)


State 7

    8 tipo: T_LOGICO •

    $default  reduce using rule 8 (tipo)


State 8

    1 programa: cabecalho variaveis • T_INICIO lista_comandos T_FIMPROG

    T_INICIO  shift, and go to state 11


State 9

    4 variaveis: declaracao_variaveis •

    $default  reduce using rule 4 (variaveis)


State 10

    5 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    6                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    1 programa: cabecalho variaveis T_INICIO • lista_comandos T_FIMPROG

    T_LEIA      shift, and go to state 14
    T_ESCREVA   shift, and go to state 15
    T_SE        shift, and go to state 16
    T_ENQUANTO  shift, and go to state 17
    T_IDENTIF   shift, and go to state 18

    lista_comandos  go to state 19
    comando         go to state 20
    leitura         go to state 21
    escrita         go to state 22
    repeticao       go to state 23
    selecao         go to state 24
    atribuicao      go to state 25


State 12

   10 lista_variaveis: T_IDENTIF •

    $default  reduce using rule 10 (lista_variaveis)


State 13

    5 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    6                     | tipo lista_variaveis •
    9 lista_variaveis: lista_variaveis • T_IDENTIF

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7
    T_IDENTIF  shift, and go to state 26

    $default  reduce using rule 6 (declaracao_variaveis)

    declaracao_variaveis  go to state 27
    tipo                  go to state 10


State 14

   18 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 28


State 15

   19 escrita: T_ESCREVA • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 35
    termo      go to state 36


State 16

   21 selecao: T_SE • expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 37
    termo      go to state 36


State 17

   20 repeticao: T_ENQUANTO • expressao T_FACA lista_comandos T_FIMENQTO

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 38
    termo      go to state 36


State 18

   22 atribuicao: T_IDENTIF • T_ATRIB expressao

    T_ATRIB  shift, and go to state 39


State 19

    1 programa: cabecalho variaveis T_INICIO lista_comandos • T_FIMPROG
   11 lista_comandos: lista_comandos • comando

    T_FIMPROG   shift, and go to state 40
    T_LEIA      shift, and go to state 14
    T_ESCREVA   shift, and go to state 15
    T_SE        shift, and go to state 16
    T_ENQUANTO  shift, and go to state 17
    T_IDENTIF   shift, and go to state 18

    comando     go to state 41
    leitura     go to state 21
    escrita     go to state 22
    repeticao   go to state 23
    selecao     go to state 24
    atribuicao  go to state 25


State 20

   12 lista_comandos: comando •

    $default  reduce using rule 12 (lista_comandos)


State 21

   13 comando: leitura •

    $default  reduce using rule 13 (comando)


State 22

   14 comando: escrita •

    $default  reduce using rule 14 (comando)


State 23

   15 comando: repeticao •

    $default  reduce using rule 15 (comando)


State 24

   16 comando: selecao •

    $default  reduce using rule 16 (comando)


State 25

   17 comando: atribuicao •

    $default  reduce using rule 17 (comando)


State 26

    9 lista_variaveis: lista_variaveis T_IDENTIF •

    $default  reduce using rule 9 (lista_variaveis)


State 27

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 5 (declaracao_variaveis)


State 28

   18 leitura: T_LEIA T_IDENTIF •

    $default  reduce using rule 18 (leitura)


State 29

   35 termo: T_VEZES •

    $default  reduce using rule 35 (termo)


State 30

   37 termo: T_NAO •

    $default  reduce using rule 37 (termo)


State 31

   38 termo: T_ABRE • expressao T_FECHA

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 42
    termo      go to state 36


State 32

   36 termo: T_F •

    $default  reduce using rule 36 (termo)


State 33

   34 termo: T_IDENTIF •

    $default  reduce using rule 34 (termo)


State 34

   33 termo: T_NUMERO •

    $default  reduce using rule 33 (termo)


State 35

   19 escrita: T_ESCREVA expressao •
   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    $default  reduce using rule 19 (escrita)


State 36

   32 expressao: termo •

    $default  reduce using rule 32 (expressao)


State 37

   21 selecao: T_SE expressao • T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE
   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_ENTAO  shift, and go to state 52
    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51


State 38

   20 repeticao: T_ENQUANTO expressao • T_FACA lista_comandos T_FIMENQTO
   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_FACA   shift, and go to state 53
    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51


State 39

   22 atribuicao: T_IDENTIF T_ATRIB • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 54
    termo      go to state 36


State 40

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIMPROG •

    $default  reduce using rule 1 (programa)


State 41

   11 lista_comandos: lista_comandos comando •

    $default  reduce using rule 11 (lista_comandos)


State 42

   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao
   38 termo: T_ABRE expressao • T_FECHA

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51
    T_FECHA  shift, and go to state 55


State 43

   23 expressao: expressao T_MAIS • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 56
    termo      go to state 36


State 44

   24 expressao: expressao T_MENOS • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 57
    termo      go to state 36


State 45

   25 expressao: expressao T_VEZES • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 58
    termo      go to state 36


State 46

   27 expressao: expressao T_MAIOR • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 59
    termo      go to state 36


State 47

   28 expressao: expressao T_MENOR • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 60
    termo      go to state 36


State 48

   26 expressao: expressao T_DIV • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 61
    termo      go to state 36


State 49

   29 expressao: expressao T_IGUAL • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 62
    termo      go to state 36


State 50

   30 expressao: expressao T_E • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 63
    termo      go to state 36


State 51

   31 expressao: expressao T_OU • expressao

    T_VEZES    shift, and go to state 29
    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_F        shift, and go to state 32
    T_IDENTIF  shift, and go to state 33
    T_NUMERO   shift, and go to state 34

    expressao  go to state 64
    termo      go to state 36


State 52

   21 selecao: T_SE expressao T_ENTAO • lista_comandos T_SENAO lista_comandos T_FIMSE

    T_LEIA      shift, and go to state 14
    T_ESCREVA   shift, and go to state 15
    T_SE        shift, and go to state 16
    T_ENQUANTO  shift, and go to state 17
    T_IDENTIF   shift, and go to state 18

    lista_comandos  go to state 65
    comando         go to state 20
    leitura         go to state 21
    escrita         go to state 22
    repeticao       go to state 23
    selecao         go to state 24
    atribuicao      go to state 25


State 53

   20 repeticao: T_ENQUANTO expressao T_FACA • lista_comandos T_FIMENQTO

    T_LEIA      shift, and go to state 14
    T_ESCREVA   shift, and go to state 15
    T_SE        shift, and go to state 16
    T_ENQUANTO  shift, and go to state 17
    T_IDENTIF   shift, and go to state 18

    lista_comandos  go to state 66
    comando         go to state 20
    leitura         go to state 21
    escrita         go to state 22
    repeticao       go to state 23
    selecao         go to state 24
    atribuicao      go to state 25


State 54

   22 atribuicao: T_IDENTIF T_ATRIB expressao •
   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    $default  reduce using rule 22 (atribuicao)


State 55

   38 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 38 (termo)


State 56

   23 expressao: expressao • T_MAIS expressao
   23          | expressao T_MAIS expressao •
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    T_MAIS    [reduce using rule 23 (expressao)]
    T_MENOS   [reduce using rule 23 (expressao)]
    T_VEZES   [reduce using rule 23 (expressao)]
    T_MAIOR   [reduce using rule 23 (expressao)]
    T_MENOR   [reduce using rule 23 (expressao)]
    T_DIV     [reduce using rule 23 (expressao)]
    T_IGUAL   [reduce using rule 23 (expressao)]
    T_E       [reduce using rule 23 (expressao)]
    T_OU      [reduce using rule 23 (expressao)]
    $default  reduce using rule 23 (expressao)


State 57

   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   24          | expressao T_MENOS expressao •
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    T_MAIS    [reduce using rule 24 (expressao)]
    T_MENOS   [reduce using rule 24 (expressao)]
    T_VEZES   [reduce using rule 24 (expressao)]
    T_MAIOR   [reduce using rule 24 (expressao)]
    T_MENOR   [reduce using rule 24 (expressao)]
    T_DIV     [reduce using rule 24 (expressao)]
    T_IGUAL   [reduce using rule 24 (expressao)]
    T_E       [reduce using rule 24 (expressao)]
    T_OU      [reduce using rule 24 (expressao)]
    $default  reduce using rule 24 (expressao)


State 58

   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   25          | expressao T_VEZES expressao •
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    T_MAIS    [reduce using rule 25 (expressao)]
    T_MENOS   [reduce using rule 25 (expressao)]
    T_VEZES   [reduce using rule 25 (expressao)]
    T_MAIOR   [reduce using rule 25 (expressao)]
    T_MENOR   [reduce using rule 25 (expressao)]
    T_DIV     [reduce using rule 25 (expressao)]
    T_IGUAL   [reduce using rule 25 (expressao)]
    T_E       [reduce using rule 25 (expressao)]
    T_OU      [reduce using rule 25 (expressao)]
    $default  reduce using rule 25 (expressao)


State 59

   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   27          | expressao T_MAIOR expressao •
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    T_MAIS    [reduce using rule 27 (expressao)]
    T_MENOS   [reduce using rule 27 (expressao)]
    T_VEZES   [reduce using rule 27 (expressao)]
    T_MAIOR   [reduce using rule 27 (expressao)]
    T_MENOR   [reduce using rule 27 (expressao)]
    T_DIV     [reduce using rule 27 (expressao)]
    T_IGUAL   [reduce using rule 27 (expressao)]
    T_E       [reduce using rule 27 (expressao)]
    T_OU      [reduce using rule 27 (expressao)]
    $default  reduce using rule 27 (expressao)


State 60

   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   28          | expressao T_MENOR expressao •
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    T_MAIS    [reduce using rule 28 (expressao)]
    T_MENOS   [reduce using rule 28 (expressao)]
    T_VEZES   [reduce using rule 28 (expressao)]
    T_MAIOR   [reduce using rule 28 (expressao)]
    T_MENOR   [reduce using rule 28 (expressao)]
    T_DIV     [reduce using rule 28 (expressao)]
    T_IGUAL   [reduce using rule 28 (expressao)]
    T_E       [reduce using rule 28 (expressao)]
    T_OU      [reduce using rule 28 (expressao)]
    $default  reduce using rule 28 (expressao)


State 61

   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   26          | expressao T_DIV expressao •
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    T_MAIS    [reduce using rule 26 (expressao)]
    T_MENOS   [reduce using rule 26 (expressao)]
    T_VEZES   [reduce using rule 26 (expressao)]
    T_MAIOR   [reduce using rule 26 (expressao)]
    T_MENOR   [reduce using rule 26 (expressao)]
    T_DIV     [reduce using rule 26 (expressao)]
    T_IGUAL   [reduce using rule 26 (expressao)]
    T_E       [reduce using rule 26 (expressao)]
    T_OU      [reduce using rule 26 (expressao)]
    $default  reduce using rule 26 (expressao)


State 62

   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   29          | expressao T_IGUAL expressao •
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51

    T_MAIS    [reduce using rule 29 (expressao)]
    T_MENOS   [reduce using rule 29 (expressao)]
    T_VEZES   [reduce using rule 29 (expressao)]
    T_MAIOR   [reduce using rule 29 (expressao)]
    T_MENOR   [reduce using rule 29 (expressao)]
    T_DIV     [reduce using rule 29 (expressao)]
    T_IGUAL   [reduce using rule 29 (expressao)]
    T_E       [reduce using rule 29 (expressao)]
    T_OU      [reduce using rule 29 (expressao)]
    $default  reduce using rule 29 (expressao)


State 63

   23 expressao: expressao • T_MAIS expressao
   24          | expressao • T_MENOS expressao
   25          | expressao • T_VEZES expressao
   26          | expressao • T_DIV expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   30          | expressao T_E expressao •
   31          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 43
    T_MENOS  shift, and go to state 44
    T_VEZES  shift, and go to state 45
    T_MAIOR  shift, and go to state 46
    T_MENOR  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_IGUAL  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51
